<resources>
    <string name="app_name">Bisq</string>
    <string name="button_pair">Pair</string>
    <string name="button_email">Send token to myself</string>
    <string name="button_next">Next</string>
    <string name="button_learn_more">Learn more</string>
    <string name="button_done">Show notifications</string>
    <string name="button_ok">OK</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_settings_register_again">Reset and pair again</string>xc
    <string name="button_congratulations">Show notifications</string>
    <string name="question_email">No Webcam?</string>
    <string name="question_email2">No Webcam?</string>
    <string name="congratulations">Congratulations, you are all set.</string>

    <string name="icon_trade"  >\uf362</string>
    <string name="icon_offer"  >\uf00c</string>
    <string name="icon_dispute">\uf0e3</string>
    <string name="icon_price"  >\uf201</string>
    <string name="icon_market" >\uf007</string>

    <string name="learn_more">Bisq is an open-source desktop application that allows you to buy and sell bitcoins in exchange for national currencies, or alternative crypto currencies.</string>
    <string name="register_instructions">Do you want to use your computer\'s webcam or do you want to send an email to yourself?</string>
    <string name="welcome">After pairing this app to Bisq on your computer, you will be able to monitor your trades.</string>
    <string name="email_subject">Pair your phone with Bisq</string>
    <string name="email_content1">Please open the Bisq desktop app on your computer and go to Account -> Notifications. Then copy this Pairing token into the field  \"Pairing token\":\n\n</string>
    <string name="email_content2">\n\nThe pairing token contains your excryption key (AES/CBC/NOPadding with initialization vector) which is used by Bisq to encrypt the notifications for you and a token from Google that identifies this app.</string>
    <string name="welcome_title">Bisq notifications</string>
    <string name="register_email_instructions">Send the email to yourself.\n\nThen go to your computer and open the Bisq App.\n\nOpen Account -> Notifications\n\nThen open the email and paste the Pairing token into Bisq.\n\nYour phone will automatically receive a confirmation notification.</string>
    <string name="register_qr_instructions">Go to your computer and open the Bisq App.\n\nOpen Account -> Notifications\n\nThen press \"Scan QR code\".\n\nYour phone will automatically receive a confirmation notification.</string>
    <string name="register_qr_confirmation_received">Congratulations, you are all set.</string>
    <string name="button_instructions">instructions</string>
    <string name="button_resend_email">Resend email</string>
    <string name="default_notification_channel_id">Bisq_notification_channel</string>
    <string name="bisq_broadcast">bisq_broadcast</string>
    <string name="settingsAboutBisqNotifications">About Bisq notifications</string>
    <string name="settingsAboutBisq">About Bisq</string>
    <string name="settingsAddExample">Add example notification</string>
    <string name="settingsMarkAsRead">Mark all as read</string>
    <string name="settingsDeleteAllNotifcations">Delete all notifications</string>

</resources>
